Fixes back button alignement on small widths and menu button position
also tightens up menu logo position on small widths

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -299,3 +299,18 @@ body {
 .light-mode .sites-header {
 	color: black;
 }
+
+.col-header-menu {
+	padding-right: 25px;
+}
+
+@media (max-width:576px) {
+	.col-header-logo {
+		padding-left: 7px;
+	}
+
+	/* attempted fix for scroll being over the menu button */
+	.col-header-menu {
+		padding-right: 25px;
+	}
+}
